--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
       <link rel="stylesheet" href="index.css">
       <link rel="icon" type="image/x-icon" href="Title.png">
+
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3146020351464497"
+     crossorigin="anonymous"></script>
       
       <link rel="shortcut icon" type="image/jpg" href="logo.png"/>
       
