--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
          function openCloak() {
             var win = window.open()
             win.document.body.style.margin='0';
-            var url = '../active/'
+            var url = '/'
             var iframe = win.document.createElement('iframe')
             iframe.style.height='100%';
             iframe.style.width='100%';
